@@ -3336,75 +3336,96 @@ AT_CLEANUP
 
 AT_SETUP([System routine CBL_OC_HOSTED])
 
-AT_DATA([prog.cob], [
-        IDENTIFICATION DIVISION.
-        PROGRAM-ID. prog.
-        DATA DIVISION.
-        WORKING-STORAGE SECTION.
-        01 STDIN    USAGE POINTER.
-        01 STDOUT   USAGE POINTER.
-        01 STDERR   USAGE POINTER.
-        01 ARGC     USAGE BINARY-LONG.
-        01 ARGV     USAGE POINTER.
-        01 ERRNO    USAGE POINTER.
-        01 ERR      USAGE BINARY-LONG BASED.
-        01 TZNAME   USAGE POINTER.
-        01 TZNAMES  USAGE POINTER BASED.
-           05 TZS      USAGE POINTER OCCURS 2 TIMES.
-        01 TIMEZONE USAGE BINARY-C-LONG.
-        01 DAYLIGHT USAGE BINARY-LONG.        
+AT_DATA([test_errno.c], [
+#include <errno.h>
+#include <stdio.h>
 
-        PROCEDURE DIVISION.
-        CALL "CBL_OC_HOSTED" USING STDIN "stdin" END-CALL
-        CALL "CBL_OC_HOSTED" USING STDOUT "stdout" END-CALL
-        CALL "CBL_OC_HOSTED" USING STDERR "stderr" END-CALL
-        CALL "CBL_OC_HOSTED" USING ARGC "argc" END-CALL
-        CALL "CBL_OC_HOSTED" USING ARGV "argv" END-CALL
-        CALL "CBL_OC_HOSTED" USING ERRNO "errno" END-CALL
-        CALL "CBL_OC_HOSTED" USING ARGC "arg" END-CALL
-        CALL "CBL_OC_HOSTED" USING NULL "argc" END-CALL
-        SET ADDRESS OF ERR TO ERRNO
-        CALL "CBL_OC_HOSTED" USING TZNAME "tzname" END-CALL
-        CALL "CBL_OC_HOSTED" USING TIMEZONE "timezone" END-CALL
-        CALL "CBL_OC_HOSTED" USING DAYLIGHT "daylight" END-CALL
-
-        IF ERR NOT EQUAL 0 THEN
-            DISPLAY "BAD ERRNO" END-DISPLAY
-        END-IF
-
-        IF ARGC NOT EQUAL 2 THEN
-            DISPLAY "BAD ARGC" END-DISPLAY
-        END-IF
-        IF ARGV EQUAL NULL THEN
-            DISPLAY "BAD ARGV" END-DISPLAY
-        END-IF
-
-        SET ENVIRONMENT "TZ" TO "PST8PDT"
-        CALL "tzset" RETURNING OMITTED
-            ON EXCEPTION CONTINUE
-        END-CALL
-        IF TZNAME NOT EQUAL NULL THEN
-            SET ADDRESS OF TZNAMES TO TZNAME
-            IF TZS(1) EQUAL NULL THEN
-                DISPLAY "BAD TZNAME" END-DISPLAY
-            END-IF
-        END-IF
-        IF DAYLIGHT NOT EQUAL 0 AND 1 THEN
-            DISPLAY "BAD DAYLIGHT" DAYLIGHT END-DISPLAY
-        END-IF
-
-        CALL "feof" USING BY VALUE STDIN END-CALL
-        IF RETURN-CODE NOT EQUAL ZERO THEN
-            DISPLAY "BAD STDIN EOF" END-DISPLAY
-        END-IF
-
-        *> Test assumes return-code will be 3, chars output by fprintf
-        CALL "fprintf" USING BY VALUE STDOUT BY CONTENT Z"OUT" END-CALL
-        CALL "fprintf" USING BY VALUE STDERR BY CONTENT Z"ERR" END-CALL
-
-        STOP RUN.
+int
+test_errno(void)
+{
+    FILE *fail;
+    fail = fopen("file-not-found", "r");
+    if (errno != 2) {
+        printf("BAD ERRNO %d", errno);
+    } else {
+        if (fail) fclose(fail);
+    }
+    return 0;
+}
 ])
 
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01 STDIN    USAGE POINTER.
+       01 STDOUT   USAGE POINTER.
+       01 STDERR   USAGE POINTER.
+       01 ARGC     USAGE BINARY-LONG.
+       01 ARGV     USAGE POINTER.
+       01 ERRNO    USAGE POINTER.
+       01 ERR      USAGE BINARY-LONG BASED.
+       01 TZNAME   USAGE POINTER.
+       01 TZNAMES  USAGE POINTER BASED.
+          05 TZS      USAGE POINTER OCCURS 2 TIMES.
+       01 TIMEZONE USAGE BINARY-C-LONG.
+       01 DAYLIGHT USAGE BINARY-LONG.
+
+       PROCEDURE DIVISION.
+       CALL "CBL_OC_HOSTED" USING STDIN "stdin" END-CALL
+       CALL "CBL_OC_HOSTED" USING STDOUT "stdout" END-CALL
+       CALL "CBL_OC_HOSTED" USING STDERR "stderr" END-CALL
+       CALL "CBL_OC_HOSTED" USING ARGC "argc" END-CALL
+       CALL "CBL_OC_HOSTED" USING ARGV "argv" END-CALL
+       CALL "CBL_OC_HOSTED" USING ERRNO "errno" END-CALL
+       CALL "CBL_OC_HOSTED" USING ARGC "arg" END-CALL
+       CALL "CBL_OC_HOSTED" USING NULL "argc" END-CALL
+       SET ADDRESS OF ERR TO ERRNO
+       CALL "CBL_OC_HOSTED" USING TZNAME "tzname" END-CALL
+       CALL "CBL_OC_HOSTED" USING TIMEZONE "timezone" END-CALL
+       CALL "CBL_OC_HOSTED" USING DAYLIGHT "daylight" END-CALL
+
+       CALL "test_errno"
+       END-CALL
+       IF ERR NOT EQUAL 2 THEN
+           DISPLAY "BAD ERRNO " ERR END-DISPLAY
+       END-IF
+
+       IF ARGC NOT EQUAL 2 THEN
+           DISPLAY "BAD ARGC" ARGC END-DISPLAY
+       END-IF
+       IF ARGV EQUAL NULL THEN
+           DISPLAY "BAD ARGV" END-DISPLAY
+       END-IF
+
+       SET ENVIRONMENT "TZ" TO "PST8PDT"
+       CALL "tzset" RETURNING OMITTED
+           ON EXCEPTION CONTINUE
+       END-CALL
+       IF TZNAME NOT EQUAL NULL THEN
+           SET ADDRESS OF TZNAMES TO TZNAME
+           IF TZS(1) EQUAL NULL THEN
+               DISPLAY "BAD TZNAME" END-DISPLAY
+           END-IF
+       END-IF
+       IF DAYLIGHT NOT EQUAL 0 AND 1 THEN
+           DISPLAY "BAD DAYLIGHT" DAYLIGHT END-DISPLAY
+       END-IF
+
+       CALL "feof" USING BY VALUE STDIN END-CALL
+       IF RETURN-CODE NOT EQUAL ZERO THEN
+           DISPLAY "BAD STDIN EOF" END-DISPLAY
+       END-IF
+
+       *> Test assumes return-code will be 3, chars output by fprintf
+       CALL "fprintf" USING BY VALUE STDOUT BY CONTENT Z"OUT" END-CALL
+       CALL "fprintf" USING BY VALUE STDERR BY CONTENT Z"ERR" END-CALL
+
+       STOP RUN.
+])
+
+AT_CHECK([$COMPILE_MODULE test_errno.c], [0], [], [])
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([./prog 1ARG], [3], [OUT], [ERR])
 
